fix check list alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,9 @@ h3 {
   margin: auto;
 }
 
+.check-list {
+  text-align: left;
+}
 /* .last-sec {
   background-image: url("../images/TransparentArrowBkgd.jpg"), linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
   background-size: cover;
